# SquigRodeo

./: .clang-format  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: static.yml
build_files/: build_obr_sdk.sh  webpack.config.ts
include/: Bestiary.hpp  Character.hpp  CharacterConstants.hpp  CharacterList.hpp  CharacterSheet.hpp  CompanionApp.hpp  InitiativeEntry.hpp  MADTable.hpp  MonsterSheet.hpp  Party.hpp  Viewable.hpp
include/obr_sdk_wrapper/: BroadcastApi.hpp  NotificationApi.hpp  OBR.hpp  PlayerApi.hpp
public/: ObrSdkWrapper.js  manifest.json
src/: Bestiary.cpp  Character.cpp  CharacterList.cpp  CharacterSheet.cpp  CompanionApp.cpp  MADTable.cpp  MonsterSheet.cpp  main.cpp  shell_minimal.html
src/obr_sdk_wrapper/: BroadcastApi.cpp
